--- a/skin/frontend/default/default/css/styles.css
+++ b/skin/frontend/default/default/css/styles.css
@@ -340,7 +340,7 @@ p.required { font-size:11px; text-align:right; color:#EB340A; }
 .pager .pages { margin:0 140px; }
 
 .pager .pages ol { display:inline; }
-.pager .pages li { display:inline; margin:0; }
+.pager .pages li { display:inline; margin:0; margin-right: 10px;}
 .pager .pages  li a,.pager .pages .current{    background: none repeat scroll 0 0 #999;
     color: #FFFFFF;
     display: inline-block;
