--- a/app/design/frontend/default/default/template/persistent/customer/form/mini-login.phtml
+++ b/app/design/frontend/default/default/template/persistent/customer/form/mini-login.phtml
@@ -38,7 +38,7 @@
                 <div class="club_tit  club_login_tit">
                     <h2>
                         <span class="small"><?php echo $this->__("Welcome to")?></span><br/>
-                        <span class="club_login_tit_small"><?php echo $this->__("LILY club")?></span>
+                        <span class="club_login_tit_small"><?php echo $this->__("Lily club")?></span>
                     </h2>
                 </div>
 
@@ -66,7 +66,7 @@
                     <div class="club_login_right">
                         <div class="club_login_title"><?php echo $this->__("Not Lily Club member?")?></div>
                         <div class="club_login_txt">
-                            <?php echo $this->__("If you are not a lily club member, you can click the “Register Now” button to be our member. Free 200 points upon registration, countable with off-line purchases.")?>
+                            <?php echo $this->__("If you are not a Lily club member, you can click the “Register Now” button to be our member. Free 200 points upon registration, countable with off-line purchases.")?>
                         </div>
                         <a href="<?php echo Mage::helper('persistent')->getCreateAccountUrl($this->getCreateAccountUrl());?>" class="club_login_regbtn"><?php echo $this->__("Register Now")?> </a>
                     </div>
