--- a/skin/frontend/base/default/css/lily/css/response.css
+++ b/skin/frontend/base/default/css/lily/css/response.css
@@ -69,6 +69,12 @@
     .club_meminfolist li strong {width:180px;}
     .club_point {width:740px;}
     .club_ecoupon_com {width:740px;}
+    .toolbar-bottom {width:740px;}
+    .product-view .product-shop {width:208px;}
+    .product-shop .product-attr-name, .product-shop .attribute-title {width:200px;}
+    /*.product-view .product-img-box {width:410px;}*/
+    /*.product-img-box .product-image img {width:300px;height:300px;}*/
+    /*.jcarousel-skin-tango .jcarousel-container-horizontal {padding:20px 22px;}*/
 }
 
 
