--- a/app/design/frontend/default/default/template/customer/form/edit.phtml
+++ b/app/design/frontend/default/default/template/customer/form/edit.phtml
@@ -82,6 +82,11 @@
                     <div class="club_meminpwform">
                         <form action="<?php echo $this->getUrl('customer/account/editPost') ?>" method="post" class="customer-password-form" id="form-validate">
                             <?php echo $this->getBlockHtml('formkey')?>
+                            <div class="password-titles">
+                                <div class="password-title">当前密码*</div>
+                                <div class="password-title">新密码*</div>
+                                <div class="password-title">确认新密码**</div>
+                            </div>
                             <div class="cs-clear">
                                 <input type="password" class="required-entry" name="current_password" id="current_password"  placeholder="<?php echo $this->__("Current password*")?>" />
                                 <input type="password" class="required-entry" name="password" id="password" placeholder="<?php echo $this->__("New password*")?>" />
