--- a/skin/frontend/base/default/css/ecommerceteam/cloudzoom.css
+++ b/skin/frontend/base/default/css/ecommerceteam/cloudzoom.css
@@ -4,19 +4,17 @@
 
 /* CSS for lens */
 .cloudzoom-lens {
-    border:5px solid #888;
+    border:5px solid #fff;
     width:100px;
     height:100px;
-    box-shadow: -0px -0px 10px rgba(0,0,0,0.40);
     cursor:crosshair;
     z-index: 10;
 }
 /* CSS for zoom window. */
 .cloudzoom-zoom {
-    border:1px solid #888;
+    border:1px solid #fff;
     width:500px;
     height:200px;
-    box-shadow: -0px -0px 10px rgba(0,0,0,0.40);
     z-index:9999;
 }
 /* CSS for zoom window in 'inside' mode. */
