--- a/skin/frontend/default/default/css/styles.css
+++ b/skin/frontend/default/default/css/styles.css
@@ -629,8 +629,7 @@ body.customer-account-create .header .quick-access{background:url("../images/nav
 .points-checkout-pfailure .main{
 padding-top:0;
 }
-.cms-points h2{ font-size: 19px;
-    font-weight: bold;}
+.cms-points h2{}
 	.cms-points h3{font-weight:bold;}
 .points-checkout-psucceed .col1-layout .col-main,
 .points-checkout-pfailure .col1-layout .col-main,
