--- a/app/design/frontend/default/default/template/page/html/header.phtml
+++ b/app/design/frontend/default/default/template/page/html/header.phtml
@@ -55,7 +55,7 @@
                 <h2 data-title="LILY-CLUB"><?php echo $this->__("VIP CLUB")?></h2>
                 <ol>
                     <li><a data-title="LILY-CLUB" href='<?php echo getClubSiteURL("customer/account/login")?>' index='9'><?php echo $this->__("LOGIN/REGISTER")?></a></li>
-                    <li><a data-title="TERMS" href='<?php echo getClubSiteURl("customer/account/create")?>' index='10'><?php echo $this->__("VIP TERMS")?></a></li>
+                    <li><a data-title="TERMS" href='<?php echo getClubSiteURl("member-rule")?>' index='10'><?php echo $this->__("VIP TERMS")?></a></li>
                     <li><a data-title="REDEMPTION" href='<?php echo getClubSiteURL("giftproducts.html")?>' index='12'><?php echo $this->__("REDEMPTION")?></a></li>
                 </ol>
             </li>
