--- a/app/design/frontend/base/default/template/ecommerceteam/cloud-zoom/catalog/product/view/media.phtml
+++ b/app/design/frontend/base/default/template/ecommerceteam/cloud-zoom/catalog/product/view/media.phtml
@@ -77,7 +77,7 @@ if ($zoomHeight) {
     <ul id="gallery-carousel" class="jcarousel-skin-tango">
     <?php foreach ($this->getGalleryImages() as $_image): ?>
         <li>
-            <a href='<?php echo $this->helper('catalog/image')->init($product, 'image', $_image->getFile())->resize($bigImageWidth, $bigImageHeight);?>' class='cloud-zoom-gallery' title='<?php echo $this->htmlEscape($_image->getLabel()) ?>'
+            <a href='<?php echo $this->helper('catalog/image')->init($product, 'image')->resize(500, 500);?>' class='cloud-zoom-gallery' title='<?php echo $this->htmlEscape($_image->getLabel()) ?>'
             rel="useZoom: 'zoom1', smallImage: '<?php echo $this->helper('catalog/image')->init($product, 'image', $_image->getFile())->resize(500, 500);?>' ">
             <img src="<?php echo $this->helper('catalog/image')->init($product, 'thumbnail', $_image->getFile())->resize(90, 90);?>" alt="<?php echo $this->htmlEscape($_image->getLabel()) ?>"/>
             </a>
