--- a/app/design/frontend/default/default/template/page/html/lily_member_rule.phtml
+++ b/app/design/frontend/default/default/template/page/html/lily_member_rule.phtml
@@ -1,6 +1,6 @@
-<div class="page page_club">
+
         <!-- <p class="club_ecoupon_txt">For system reason,  E coupon information will be synchronized after 24 hours later. </p> -->
-        <div class="club_ecoupon_center cs-clear">
+        <div class="club_member_rule cs-clear">
     
 
             <?php echo $this->getChildHtml("lily_customer_nav")?>
@@ -10,4 +10,3 @@
             </div>
             <?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('club-rule')->toHtml(); ?>
         </div>
-</div>
