--- a/app/design/frontend/default/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/default/default/template/catalog/product/list.phtml
@@ -112,7 +112,7 @@
                         <?php $i=1; foreach ($_productCollection as $_product): ?>
                                 <li class="item-<?php  echo $i?>">
                                     <a class="club_img" href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" class="product-image">
-                                        <img src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(280,370); ?>" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" />
+                                        <img src="<?php echo $this->helper('catalog/image')->init($_product, 'thumbnail')->resize(135,135); ?>" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" />
                                         <p class="product-name"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></p>
                                         <?php if(Mage::getSingleton('customer/session')->isLoggedIn()):?>
                                         <div class="product-attr">
