--- a/skin/frontend/base/default/css/lily/css/club.css
+++ b/skin/frontend/base/default/css/lily/css/club.css
@@ -260,6 +260,8 @@ button.btn-checkout span span {padding:5px 25px 5px 25px;display:block;}
 .password-titles {display: none;}
 .password-title {float:left;width:260px;}
 .reg-disable-layout {background:#f3dedd;width:890px;height:470px;position:absolute;top:126px;opacity:0.7;filter:alpha(opacity=70); }
+.note-msg, .notice-msg {background:none;color:#000;border:1px solid #000;}
+.catalogsearch-result-index .page-title h1, .category-giftproducts .category-title h1 {border:none;}
 /* Mobile Used
 ================================================================================================= */
 .dis_mobile { display: none }
