--- a/skin/frontend/base/default/css/lily/css/club.css
+++ b/skin/frontend/base/default/css/lily/css/club.css
@@ -211,6 +211,7 @@ button.btn-checkout span span {padding:5px 25px 5px 25px;display:block;}
 #custom_address_con .content-wrapper {border:none;}
 #points_checkout_form .shipping-method .form-list li input {margin:8px 6px 0 0;}
 #points_checkout_form .shipping-method .form-list li label {margin-top:6px;}
+#points_checkout_form .shipping-method {padding:0 0 20px 0;}
 
 .club_img{display: block;width: 140px;padding:3px 0 0 3px;position: relative;margin: 0 auto}
 .club_img img {-webkit-box-shadow: 5px 5px 0 0 #d9c6c5;box-shadow: 5px 5px 0 0 #d9c6c5;}
@@ -373,5 +374,5 @@ button.btn-checkout span span {padding:5px 25px 5px 25px;display:block;}
     #points_checkout_form .content {font-size:14px;}
 
     .club_bottom_nav {margin:30px 0;}
-
+    .club_welcome_m {background:#000 url('../images/m_nav_arrow.png') no-repeat 380px center;}
 }
