--- a/app/design/frontend/default/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/default/default/template/catalog/product/list.phtml
@@ -47,7 +47,7 @@
             <div class="club_ecoupon_com club_point">
                 <div class="cs-clear ">
                     <div class="club_pointexnav cs-clear">
-                        礼品目录
+                        <?php echo $this->__("Gift Catalog")?>
                         <div class="club_pointexfilter">
                             <p class="club_pointexfiltertit"><?php echo $this->__("FILTER")?>:</p>
                             <p class="club_pointexselbox">
