--- a/app/design/frontend/default/default/template/catalog/product/searchproducts.phtml
+++ b/app/design/frontend/default/default/template/catalog/product/searchproducts.phtml
@@ -38,8 +38,13 @@
 
 <!--  -->
     <!--  -->
+<div class="club_login">
+    <div class="club_tit ">
+        <h2><?php echo $this->__("Point<br />Exchange")?></h2>
+    </div>
             <div class="club_ecoupon_com club_point">
                     <div class="club_pointexnav cs-clear">
+                        <?php echo $this->__("Gift Catalog")?>
                         <div class="club_pointexfilter">
                             <p class="club_pointexfiltertit"><?php echo $this->__("FILTER")?>:</p>
                             <p class="club_pointexselbox">
@@ -128,3 +133,4 @@
                     </div>
             </div>
     <!--  -->
+</div>
