--- a/app/design/frontend/default/default/template/checkout/cart.phtml
+++ b/app/design/frontend/default/default/template/checkout/cart.phtml
@@ -142,7 +142,7 @@
         </div>
         <?php if(!$this->hasError()): ?>
             <ul class="checkout-types">
-                <?php if ($this->checkedInOneMonth() && FALSE): ?>
+                <?php if ($this->checkedInOneMonth()): ?>
                     <li>
                         <button type="button" class="button btn-proceed-checkout btn-checkout" onclick="javascript:void(0)"><span><span><?php echo $this->__("Confirm")?></span></span></button>
                     </li>
