--- a/skin/frontend/base/default/css/lily/css/club.css
+++ b/skin/frontend/base/default/css/lily/css/club.css
@@ -265,6 +265,7 @@ button.btn-checkout span span {padding:5px 25px 5px 25px;display:block;}
 .note-msg, .notice-msg {background:none;color:#000;border:1px solid #000;}
 .catalogsearch-result-index .page-title h1, .category-giftproducts .category-title h1 {border:none;}
 .catalogsearch-result-index .page-title {display: none;}
+.language {display: none;}
 /* Mobile Used
 ================================================================================================= */
 .dis_mobile { display: none }
