--- a/skin/frontend/base/default/css/lily/css/club.css
+++ b/skin/frontend/base/default/css/lily/css/club.css
@@ -89,7 +89,7 @@ address {font-style: normal;}
 .club_ecoupon_txt{text-align: center;margin:0 0 15px 0;}
 .club_ecoupon_center{padding: 10px 0 0 0;width:1105px;margin:0 auto;}
 .club_ecoupon_nav{width:240px;float: left;font-size:18px;line-height: 150%;}
-.club_welcome{font-weight: bold;}
+.club_welcome{}
 .club_logout{width: 122px;height: 48px;background:#000;color:#fff;display: block;line-height: 48px;text-align: center;font-weight: bold;margin: 15px 0 90px 0;}
 .club_navlist a{height: 35px;display: block;}
 .club_navlist .on{text-decoration: underline;}
