--- a/app/design/frontend/default/default/template/page/html/footer.phtml
+++ b/app/design/frontend/default/default/template/page/html/footer.phtml
@@ -153,6 +153,17 @@
 	        <input class="search_btn" type="submit" value="<?php echo $this->__(  "Search")?>" />
         </div>
     </div>
+    <div class="weixin_popup popup">
+        <div class="popup_close"></div>
+        <div class="weixin_popup_wrap">
+            <div class="weixinwrap">
+                <img class="icon" src="http://115.29.246.71/images/weixinicon.png" alt="weixin">
+                <p>微信搜索<span>“Lily商务时装”</span></p>
+                <p>关注我们即可了解最新咨询</p>
+                <img class="code" src="http://115.29.246.71/images/weixin.png" alt="weixin">
+            </div>
+        </div>
+    </div>
 
 
     <script>
