--- a/app/design/frontend/base/default/template/catalogsearch/result.phtml
+++ b/app/design/frontend/base/default/template/catalogsearch/result.phtml
@@ -39,6 +39,9 @@
     </p>
     <?php endif; ?>
 
+    <div class="club_tit ">
+        <h2><?php echo $this->__("Point<br />Exchange")?></h2>
+    </div>
     <div class="club_ecoupon_center cs-clear">
             <?php echo $this->getChildHtml("lily_customer_nav")?>
             <?php echo $this->getProductListHtml() ?>
