--- a/app/design/frontend/base/default/template/points/shipping.phtml
+++ b/app/design/frontend/base/default/template/points/shipping.phtml
@@ -13,7 +13,7 @@
 			</div>
 		</li>
 		<?php if ($this->canUseExpressShipping()): ?>
-		<li>	
+		<li style="display: none;">
 			<div class="input-box">
 				<label for="express"><?php echo $this->__('Express with 1500 points') ?></label>
 				<input type="radio" name="shipping_method" value="express" id="express" class="input-text" title="<?php echo $this->__('Express with 1500 points') ?>" />
